TypeChecking/test_cases/bad/bad-self-1.cl
class Main {
  main( ) : Object { 5 } ; 

  foo(self : Int, y : String) : Int { 5 } ; 
} ;

